AicpExtras: Short string
PS2: Remove original string

Change-Id: I23823a158e7ea443048d595522203a4da3793091

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -23,7 +23,7 @@
 
     <string name="action_settings">Ajustes</string>
     <string name="aicp_extras_title">Extras AICP</string>
-    <string name="pun_title">Una rom para gobernarlos a todosOne rom to rule them all</string>
+    <string name="pun_title">Una rom para gobernarlos a todos</string>
     <string name="various_shit_title">Varios</string>
     <string name="about_title">Acerca de</string>
     <string name="other_title">Otros</string>
@@ -32,7 +32,7 @@
     <string name="ui_title">Interfaz de usuario</string>
     <string name="logo">logo</string>
     <string name="display_animations_title">Pantalla y animaciones</string>
-    <string name="transparency_porn_title">Personalización de paneles</string>
+    <string name="transparency_porn_title">Estilo de paneles</string>
     <string name="notificaitons_title">Panel de notificación</string>
     <string name="statubar_title">Barra de estado</string>
     <string name="lockscreen_title">Pantalla de bloqueo</string>
