AicpExtras: Short string
Change-Id: I23823a158e7ea443048d595522203a4da3793091

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -32,7 +32,7 @@
     <string name="ui_title">Interfaz de usuario</string>
     <string name="logo">logo</string>
     <string name="display_animations_title">Pantalla y animaciones</string>
-    <string name="transparency_porn_title">Personalización de paneles</string>
+    <string name="transparency_porn_title">Estilo de paneles</string>
     <string name="notificaitons_title">Panel de notificación</string>
     <string name="statubar_title">Barra de estado</string>
     <string name="lockscreen_title">Pantalla de bloqueo</string>
