--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -529,6 +529,10 @@
     <string name="qs_battery_easy_toggle_title">Battery tile easy toggle</string>
     <string name="qs_battery_easy_toggle_summary">Makes it so one click will turn Battery Saver on or off instead of taking you to settings</string>
 
+    <!-- BT easy toggle -->
+    <string name="qs_bt_easy_toggle_title">Bluetooth tile easy toggle</string>
+    <string name="qs_bt_easy_toggle_summary">Makes it so one click will turn Bluetooth on or off instead of taking you to settings</string>
+
     <!-- OmniSwitch Recents -->
     <string name="aosp_recents_title">AICP recents</string>
     <string name="omniswitch_recents_title">OmniSwitch recents</string>
