AE: group and streamline Easy Toggles
 -Advanced Data Tile is an Easy Toggle too
 -Simplify labels and summaries

Change-Id: I846227e91ff8c8c85d1bada93f6e8eb6f3f21b9a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -423,7 +423,7 @@
     <string name="quick_settings_vibrate_summary">Vibrate when touching tiles</string>
 
     <!-- Advanced data tile -->
-    <string name="qs_advanced_data_title">Advanced data tile</string>
+    <string name="qs_advanced_data_title">Data tile easy toggle</string>
     <string name="qs_advanced_data_summary">Enable one tap action to enable or disable data</string>
 
     <!-- SystemUI restart prompt -->
@@ -527,15 +527,15 @@
 
     <!-- Battery Saver easy toggle -->
     <string name="qs_battery_easy_toggle_title">Battery tile easy toggle</string>
-    <string name="qs_battery_easy_toggle_summary">Makes it so one click will turn Battery Saver on or off instead of taking you to settings</string>
+    <string name="qs_battery_easy_toggle_summary">Enable one tap action to enable or disable Battery Saver</string>
 
     <!-- BT easy toggle -->
     <string name="qs_bt_easy_toggle_title">Bluetooth tile easy toggle</string>
-    <string name="qs_bt_easy_toggle_summary">Makes it so one click will turn Bluetooth on or off instead of taking you to settings</string>
+    <string name="qs_bt_easy_toggle_summary">Enable one tap action to enable or disable Bluetooth</string>
 
     <!-- WiFi easy toggle -->
     <string name="qs_wifi_easy_toggle_title">WiFi tile easy toggle</string>
-    <string name="qs_wifi_easy_toggle_summary">Makes it so one click will turn WiFi on or off instead of taking you to settings</string>
+    <string name="qs_wifi_easy_toggle_summary">Enable one tap action to enable or disable WiFi</string>
 
     <!-- OmniSwitch Recents -->
     <string name="aosp_recents_title">AICP recents</string>
