AE: add System Extensions fragment
- Add System App Remover as the first entry

Change-Id: I31cf56d12c07823555a01dd322c73f45a5253764
Signed-off-by: Ali B <abittin@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -572,4 +572,8 @@
     <string name="sizer_message_filefail">Failed to create profile.</string>
     <string name="sizer_message_noselect">Nothing selected.</string>
     <string name="system_app_remover">System App Remover</string>
+
+    <!-- Extensions settings -->
+    <string name="extensions_title">System extensions</string>
+
 </resources>
