AE: peeking = headsup
Change-Id: I308fc98f1318ff10e01a85f602139bb609593bf4

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -491,16 +491,16 @@
     <string name="recents_clear_all_location_bottom_center">Bottom center</string>
 
     <!-- Heads up settings -->
-    <string name="nav_headsup_title">Peeking notifications</string>
-    <string name="headsup_settings_category">Peeking notifications</string>
-    <string name="headsup_settings_title">Enable Peeking notifications</string>
-    <string name="headsup_settings_summary">To allow applications to display interactive notifications in a pop-up window on your screen, enable Peeking notifications.</string>
-    <string name="summary_heads_up_enabled">Peeking notifications are enabled</string>
-    <string name="summary_heads_up_disabled">Peeking notifications are disabled</string>
+    <string name="nav_headsup_title">Headsup notifications</string>
+    <string name="headsup_settings_category">Headsup notifications</string>
+    <string name="headsup_settings_title">Enable headsup notifications</string>
+    <string name="headsup_settings_summary">To allow applications to display interactive notifications in a pop-up window on your screen, enable Headsup notifications.</string>
+    <string name="summary_heads_up_enabled">Headsup notifications are enabled</string>
+    <string name="summary_heads_up_disabled">Headsup notifications are disabled</string>
 
     <!-- Heads up timeout -->
     <string name="heads_up_time_out_title">Time out</string>
-    <string name="heads_up_time_out_summary">Peeking notifications will show for <xliff:g id="number">%d</xliff:g> seconds</string>
+    <string name="heads_up_time_out_summary">Headsup notifications will show for <xliff:g id="number">%d</xliff:g> seconds</string>
     <string name="heads_up_time_out_2sec">2 seconds</string>
     <string name="heads_up_time_out_4sec">4 seconds</string>
     <string name="heads_up_time_out_5sec">5 seconds</string>
@@ -510,8 +510,8 @@
 
     <!-- Heads up snooze -->
     <string name="heads_up_snooze_title">Snooze timer</string>
-    <string name="heads_up_snooze_summary_one_minute">Swiping up on peeking notifications will snooze heads up from that application for 1 minute</string>
-    <string name="heads_up_snooze_summary">Swiping up on peeking notifications will snooze heads up from that application for <xliff:g id="number">%d</xliff:g> minutes</string>
+    <string name="heads_up_snooze_summary_one_minute">Swiping up on headsup notifications will snooze heads up from that application for 1 minute</string>
+    <string name="heads_up_snooze_summary">Swiping up on headsup notifications will snooze heads up from that application for <xliff:g id="number">%d</xliff:g> minutes</string>
     <string name="heads_up_snooze_disabled">Disabled</string>
     <string name="heads_up_snooze_disabled_summary">Snooze timer is disabled</string>
     <string name="heads_up_snooze_1min">1 minute</string>
