AE: add two more snooze options
- 30 mins
- 60 mins

If you are in a meeting, dont interrupt for that long

Change-Id: If5943e1c071d6c3b26cba0b3e39557ec3a41e6ab

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -520,6 +520,8 @@
     <string name="heads_up_snooze_10min">10 minutes</string>
     <string name="heads_up_snooze_15min">15 minutes</string>
     <string name="heads_up_snooze_20min">20 minutes</string>
+    <string name="heads_up_snooze_30min">30 minutes</string>
+    <string name="heads_up_snooze_60min">60 minutes</string>
 
     <!-- Lockscreen battery info indicator  -->
     <string name="lockscreen_battery_info_title">Lockscreen battery info</string>
