Enable\Disable bluetooth battery status[2/2]
Change-Id: Icb90d9e6ccf5480162b0e1eb970bdcdf2d03a2c7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -578,4 +578,8 @@
     <!-- Extensions settings -->
     <string name="extensions_title">System extensions</string>
 
+    <!-- Bluetooth status -->
+    <string name="bluetooth_battery_title">Show Bluetooth battery status</string>
+    <string name="bluetooth_battery_summary">Show battery status for the currently connected bluetooth device, if availible.</string>
+
 </resources>
