--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,12 +25,12 @@
 
     <string name="action_settings">Settings</string>
     <string name="aicp_extras_title">AICP Extras</string>
-    <string name="pun_title">One rom to rule them all</string>
+    <string name="pun_title">One ROM to rule them all.</string>
     <string name="various_shit_title">Various shit</string>
     <string name="about_title">About</string>
     <string name="other_title">Other</string>
     <string name="g_community">G+ community</string>
-    <string name="g_plus_summary">Visit Our Google+ Community</string>
+    <string name="g_plus_summary">Visit our Google+ Community.</string>
     <string name="ui_title">UI</string>
     <string name="logo">logo</string>
     <string name="display_animations_title">Display and animations</string>
@@ -39,9 +39,11 @@
     <string name="statubar_title">Status bar</string>
     <string name="lockscreen_title">Lock screen</string>
     <string name="aicp_downloads_title">Downloads</string>
-    <string name="dwnld_summary">Visit the AICP download page for your device</string>
+    <string name="dwnld_summary">Visit the AICP download page for your device.</string>
     <string name="aicp_gerrit_title">Gerrit</string>
-    <string name="gerrit_summary">Visit our Gerrit to know what we are working on</string>
+    <string name="ae_version_title">AICP Extras version</string>
+    <string name="ae_version_summary">0.3.0</string>
+    <string name="gerrit_summary">Visit our Gerrit to know what we are working on.</string>
     <string name="hidden_anim_activity_title">Yoga time!!!</string>
     <string name="hidden_anim_more_title">MORE?</string>
     <string name="hidden_anim_more_nice">NICE</string>
@@ -49,20 +51,20 @@
     <string name="settings_activity_title">AE settings</string>
     <string name="recents_panel_title">Recents panel</string>
 
-    <string name="nothing_title">Nothing to see here yet, move along</string>
+    <string name="nothing_title">Nothing to see here yet, move along.</string>
 
     <!-- Switch On/Off  -->
     <string name="switch_on_text">On</string>
     <string name="switch_off_text">Off</string>
 
     <!-- Permissions -->
-    <string name="storage_permission_granted">Permission Granted, Now you can write to storage.</string>
-    <string name="storage_permission_not_granted">Permission Denied, You cannot write to storage.</string>
+    <string name="storage_permission_granted">Permission granted, now you can write to storage.</string>
+    <string name="storage_permission_not_granted">Permission denied, you cannot write to storage.</string>
 
     <!-- Change Log -->
     <string name="changelog_title">Changelog</string>
-    <string name="changelog_title_summary">View recent changes in ROM</string>
-    <string name="changelog_error">Unable to load changelog</string>
+    <string name="changelog_title_summary">View recent changes made to AICP.</string>
+    <string name="changelog_error">Unable to load changelog.</string>
 
     <!-- Toast Icons -->
     <string name="toast_icon_title">Toast icon</string>
@@ -174,7 +176,7 @@
     <!-- ROM Stats -->
     <!-- Main -->
     <string name="stats_title">Stats</string>
-    <string name="stats_summary">Opt in/out for anonymous stats</string>
+    <string name="stats_summary">Opt in/out for anonymous stats.</string>
 
     <!-- Notification -->
     <string name="notification_ticker">Statistics opted-In</string>
@@ -412,7 +414,7 @@
     <string name="ae_settings_summary_title">Custom AE summary text in Settings application</string>
     <string name="custom_summary_title">Custom AE summary</string>
     <string name="custom_summary_explain">Please enter a new summary. Leave blank to revert to stock text.</string>
-    <string name="custom_summary_notset">Custom rom personalizations</string>
+    <string name="custom_summary_notset">Custom ROM personalizations</string>
 
     <!-- Statusbar 4G LTE switch -->
     <string name="show_fourg_title">Show 4G instead of LTE</string>
