AicpExtras: spanish version translation
Change-Id: I37934c199b064f18cfccf41f858e895934afba85

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -23,7 +23,7 @@
 
     <string name="action_settings">Ajustes</string>
     <string name="aicp_extras_title">Extras AICP</string>
-    <string name="pun_title">Una rom para gobernarlos a todos</string>
+    <string name="pun_title">Una ROM para gobernarlos a todos</string>
     <string name="various_shit_title">Varios</string>
     <string name="about_title">Acerca de</string>
     <string name="other_title">Otros</string>
@@ -40,6 +40,8 @@
     <string name="dwnld_summary">Visitar la página de descargas de AICP para tu dispositivo</string>
     <string name="aicp_gerrit_title">Gerrit</string>
     <string name="gerrit_summary">Visitar nuestro Gerrit para saber en qué estamos trabajando</string>
+    <string name="ae_version_title">Versión de Extras AICP</string>
+    <string name="ae_version_summary">0.3.0</string>
     <string name="hidden_anim_activity_title">Hora de Yoga!!!</string>
     <string name="hidden_anim_more_title">MÁS?</string>
     <string name="hidden_anim_more_nice">AGRADABLE</string>
@@ -47,7 +49,7 @@
     <string name="settings_activity_title">Ajustes de Extras AICP</string>
     <string name="recents_panel_title">Panel de aps. recientes</string>
 
-    <string name="nothing_title">Nada que ver aquí</string>
+    <string name="nothing_title">Nada que ver aquí por ahora.</string>
 
     <!-- Switch On/Off  -->
     <string name="switch_on_text">Activado</string>
@@ -59,7 +61,7 @@
 
     <!-- Change Log -->
     <string name="changelog_title">Lista de cambios</string>
-    <string name="changelog_title_summary">Ver la lista de cambios recientes de la ROM</string>
+    <string name="changelog_title_summary">Ver la lista de cambios recientes de AICP</string>
     <string name="changelog_error">No se pudo cargar la lista de cambios</string>
 
     <!-- Toast Icons -->
@@ -170,7 +172,7 @@
     <!-- ROM Stats -->
     <!-- Main -->
     <string name="stats_title">Estadísticas</string>
-    <string name="stats_summary">Activar/Desactivar envío de estadísticas anónimas</string>
+    <string name="stats_summary">Activar/Desactivar envío de estadísticas anónimas.</string>
 
     <!-- Notification -->
     <string name="notification_ticker">Estadísticas habilitadas</string>
@@ -390,7 +392,7 @@
     <string name="ae_settings_summary_title">Custom AE summary text in Settings application</string>
     <string name="custom_summary_title">Texto a mostrar bajo Extras AICP en Ajustes</string>
     <string name="custom_summary_explain">Escriba el texto que desee. En blanco para usar el predeterminado.</string>
-    <string name="custom_summary_notset">Personalizaciones de la rom</string>
+    <string name="custom_summary_notset">Personalizaciones de la ROM</string>
 
     <!-- Statusbar 4G LTE switch -->
     <string name="show_fourg_title">Mostrar 4G en lugar de LTE</string>
